--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "tap test/*.js",
-    "build": "browserify -s panzoom ./index.js > dist/panzoom.js && uglifyjs dist/panzoom.js > dist/panzoom.min.js",
-    "start": "npm run build"
+    "build:old": "browserify -s panzoom ./index.js > dist/panzoom.js && uglifyjs dist/panzoom.js > dist/panzoom.min.js",
+    "start": "npm run build",
+    "build": "./node_modules/.bin/webpack"
   },
   "keywords": [
     "dom",
@@ -26,9 +27,14 @@
     "wheel": "0.0.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "babel-loader": "^8.0.6",
     "browserify": "^16.2.3",
     "jsdom": "^15.1.1",
     "tap": "^14.3.1",
-    "uglify-js": "^3.6.0"
+    "uglify-js": "^3.6.0",
+    "webpack": "^4.39.3",
+    "webpack-cli": "^3.3.7"
   }
 }
